--- a/SvoyaIgra/SvoyaIgra.csproj
+++ b/SvoyaIgra/SvoyaIgra.csproj
@@ -74,7 +74,27 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\AuctionControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\AuctionControl.Designer.cs">
+      <DependentUpon>AuctionControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\IBaseControl.cs" />
+    <Compile Include="Controls\FinalAnsControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\FinalAnsControl.Designer.cs">
+      <DependentUpon>FinalAnsControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\UserEditControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UserEditControl.Designer.cs">
+      <DependentUpon>UserEditControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Data\User.cs" />
+    <Compile Include="Extensions\ControlCollectionExtensions.cs" />
     <Compile Include="Forms\GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +118,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\MyQueue.cs" />
     <Compile Include="Utils\QuestionRect.cs" />
+    <EmbeddedResource Include="Controls\AuctionControl.resx">
+      <DependentUpon>AuctionControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\FinalAnsControl.resx">
+      <DependentUpon>FinalAnsControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\UserEditControl.resx">
+      <DependentUpon>UserEditControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
       <SubType>Designer</SubType>
